--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
         <title>Exemple</title>
     </head>
     <body>
-        Hello wold
+        Hello!
+        <table border="solid">
+            <tr>
+                <td>Nom</td>
+                <td>Prenom</td>
+            </tr>
+            <tr>
+                <td>Rakotomalala</td>
+                <td>Andriatiana</td>
+            </tr>
+        </table>
     </body>
 </html>
